--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
 	"extra": {
 		"patternlab": {
 			"config": { 
-				"lineageMatch": "{%([ ]+)?include [&quot;\\&#039;]([A-Za-z0-9-_]+)[&quot;\\&#039;](.*)%}",
-				"lineageMatchKey": 2,
+				"lineageMatch": "{%([ ]+)?(include|embed) [&quot;\\&#039;]([A-Za-z0-9-_]+)[&quot;\\&#039;](.*)%}",
+				"lineageMatchKey": 3,
 				"patternExtension": "twig",
 				"twigDebug": false,
 				"twigDefaultDateFormat": "",
